sso/keycloak-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    run.armada/part-of: login
    run.armada/component: keycloack
    run.armada/tier: deployment
    run.armada/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run.armada/part-of: login
      run.armada/component: keycloack
      run.armada/tier: application
  strategy:
    type: Recreate
  template:
    metadata:
      name: keycloak
      labels:
        run.armada/part-of: login
        run.armada/component: keycloack
        run.armada/tier: application
        run.armada/version: v1
    spec:
      containers:
      - name: keycloak-container
        image: jboss/keycloak
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
