sso/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: armada-ingress-keycloak
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: login.armada.run
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 8080
      - path: /auth
        backend:
          serviceName: keycloak
          servicePort: 8080
